--- a/webprje/src/main/webapp/WEB-INF/web.xml
+++ b/webprje/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,23 @@
 <url-pattern>/</url-pattern>
 </servlet-mapping>
 
+<filter> <!-- 필터기능 요청과 서블릿 중간에 필터를 해서 한글이 꺠지는걸 방지 -->
+	<filter-name>charaterEncodingFilter</filter-name>
+	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+	<init-param>
+		<param-name>encoding</param-name>
+		<param-value>UTF-8</param-value>
+	</init-param>
+	<init-param>
+		<param-name>forceEncoding</param-name>
+		<param-value>true</param-value>
+	</init-param>
+</filter>
+<filter-mapping>
+	<filter-name>charaterEncodingFilter</filter-name>
+	<url-pattern>/*</url-pattern>
+</filter-mapping>
+
   <display-name>Welcome to Tomcat</display-name>
   <description>
      Welcome to Tomcat
